# fast-files

./: .gitignore  README.md  pyproject.toml  rec.py  requirements.txt
.github/workflows/: master.yaml
docs/: main.md
src/fastfiles/: localstorage.py  main.py
src/faststore/: __init__.py  localstorage.py  main.py  memorystorage.py  s3.py
src/filestore/: __init__.py  localstorage.py  main.py  memorystorage.py  s3.py  util.py
tests/: __init__.py  app.py  home.html  test_fast_store.py  test_local_storage.py  utils.py
