[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "faststore"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ['fastapi', 'filestorage', 'cloudstorage']
authors = [{name = "Ichinga Samuel", email = "ichingasamuel@gmail.com"}]
description = "Storage Engine Package for FastAPI"

[project.urls]
"Homepage" = "https://github.com/Ichinga-Samuel/faststore"
"Bug Tracker" = "https://github.com/Ichinga-Samuel/faststore/issues"
